@startuml Strategy Diagram

left to right direction

skinparam class {
    BackgroundColor<<Sort>> LightGreen
    BackgroundColor<<Search>> LightYellow
}

package "Strategy" {
    package "SearchStrategyPackage" {
        interface SearchStrategy <<Search>> {
            + search(books: List<Book>, keyword: String): List<Book>
        }

        class TitleSearchStrategy <<Search>> {
            + search(books: List<Book>, keyword: String): List<Book>
        }

        class AuthorSearchStrategy <<Search>> {
            + search(books: List<Book>, keyword: String): List<Book>
        }

        class FilteredSearchStrategy <<Search>> {
            - baseStrategy: SearchStrategy
            - statusFilter: String
            - minRating: Integer
            + FilteredSearchStrategy(baseStrategy: SearchStrategy, statusFilter: String, minRating: Integer)
            + search(books: List<Book>, keyword: String): List<Book>
        }
    }

    package "SortStrategyPackage" {
        interface SortStrategy <<Sort>> {
            + sort(books: List<Book>): List<Book>
            + getName(): String
        }

        class AuthorSortStrategy <<Sort>> {
            + sort(books: List<Book>): List<Book>
            + getName(): String
        }

        class TitleSortStrategy <<Sort>> {
            + sort(books: List<Book>): List<Book>
            + getName(): String
        }


        class InsertionSortStrategy <<Sort>> {
            + sort(books: List<Book>): List<Book>
            + getName(): String
        }

        class SortStrategyManager <<Sort>> {
            - strategies: List<SortStrategy>
            - currentIndex: int
            + SortStrategyManager()
            + nextStrategy(): SortStrategy
            + getCurrentStrategy(): SortStrategy
            + setCurrentStrategy(strategyIndex: int): void
        }
    }
}

' Relazioni SearchStrategy
SearchStrategy <|.. TitleSearchStrategy
SearchStrategy <|.. AuthorSearchStrategy
SearchStrategy <|.. FilteredSearchStrategy

' Ha un riferimento a SearchStrategy (composizione)
FilteredSearchStrategy *-- SearchStrategy : decora >

' Relazioni SortStrategy
SortStrategy <|.. AuthorSortStrategy
SortStrategy <|.. TitleSortStrategy
SortStrategy <|.. InsertionSortStrategy
SortStrategyManager o-- SortStrategy

@enduml
